--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,14 +9,14 @@
   <header>
     <h1>📖 Book Notes</h1>
     <nav>
-      <a href="/">Home</a> | 
-      <a href="/add">Adicionar Livro</a>
+      <a href="/">Início</a> | 
+      <a href="/books/add">Adicionar Livro</a>
     </nav>
     <hr>
   </header>
 
   <main>
-    <%- body %> <!-- Aqui vai o conteúdo de cada página -->
+    <%- body %>
   </main>
 
   <footer>
