--- a/views/register.ejs
+++ b/views/register.ejs
@@ -22,4 +22,11 @@
       <a class="btn ghost" href="/login">Já tenho conta</a>
     </div>
   </form>
+
+  <div class="separator">ou</div>
+
+  <a href="/auth/google" class="google-btn" aria-label="Registrar com Google">
+    <img src="https://cdn.simpleicons.org/google/000000" alt="Google">
+    Registrar com Google
+  </a>
 </section>
