--- a/views/editBook.ejs
+++ b/views/editBook.ejs
@@ -1,6 +1,6 @@
 <% title = "Editar livro"; %>
 
-<!-- Formulário para editar um livro existente. `book` vem do servidor. -->
+<!-- Formulário para editar um livro existente. -->
 <section class="form-card">
   <h2>Editar: <%= book.title %></h2>
   <form action="/books/edit/<%= book.id %>" method="post" class="book-form">
