--- a/views/register.ejs
+++ b/views/register.ejs
@@ -26,9 +26,8 @@
 
   <div class="separator">ou</div>
 
-  <!-- Registro via Google (não cria senha) -->
+  <!-- Registro via Google  -->
    <a href="/auth/google" class="google-btn" aria-label="Entrar com Google">
-    <!-- CDN SimpleIcons: cor preta (000000). Troca a cor se quiser -->
     <img src="https://cdn.simpleicons.org/google/000000" alt="Google" class="google-icon-img">
      Entrar com Google
   </a>
